# docs/swagger.json
@@ -141,8 +141,7 @@
                         "type": "file",
                         "description": "Product Image",
                         "name": "image",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -194,7 +193,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.Product"
+                            "$ref": "#/definitions/handlers.ProductUpdate"
                         }
                     }
                 ],
@@ -444,13 +443,6 @@
                         "description": "Bearer token",
                         "name": "Authorization",
                         "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Customer ID",
-                        "name": "customer_id",
-                        "in": "formData",
                         "required": true
                     },
                     {
@@ -819,13 +811,12 @@
                 }
             }
         },
-        "handlers.Product": {
+        "handlers.ProductUpdate": {
             "type": "object",
             "required": [
                 "description",
                 "name",
-                "price",
-                "stock"
+                "price"
             ],
             "properties": {
                 "description": {
@@ -843,11 +834,6 @@
                 "requires_prescription": {
                     "type": "boolean",
                     "example": true
-                },
-                "stock": {
-                    "type": "integer",
-                    "minimum": 0,
-                    "example": 100
                 }
             }
         },
@@ -898,13 +884,12 @@
         "handlers.StockRequest": {
             "type": "object",
             "required": [
-                "quantity",
+                "quantity_change",
                 "reason"
             ],
             "properties": {
-                "quantity": {
-                    "type": "integer",
-                    "minimum": 0
+                "quantity_change": {
+                    "type": "integer"
                 },
                 "reason": {
                     "type": "string"
